# merge_sqlite

./: .cruft.json  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  dev-requirements.txt  pyproject.toml  tox.ini
merge_sqlite/: __init__.py  __main__.py  main.py
tests/unit/: test_main.py
